"report check in 2018-10-21"

--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -70,7 +70,7 @@ Enter amount of seconds:
 	[SUCCESSFUL COMPILE] Exercise4.java
 [RUNNING] Exercise4
 -->
-4
+77
 	
 <--
 	[OUTPUT OK]
@@ -424,22 +424,17 @@ Ch6Ex5.java:57: error: cannot find symbol
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 2/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
