--- a/stureports/think-java/ReidLuhn.think-java_results.html
+++ b/stureports/think-java/ReidLuhn.think-java_results.html
@@ -66,8 +66,8 @@ Enter seconds: That is 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 1 and 100, can you guess it?
 	Your guess is: 13
-	My number was: 13
-	You were off by: 0
+	My number was: 17
+	You were off by: 4
 <--
 	[OUTPUT OK]
 
@@ -270,14 +270,17 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
-	  TEST FINISHED, PASSED: 6/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
@@ -289,15 +292,18 @@ Test: Chapter7, Exercise5.areFactors()
 	[SUCCESSFUL COMPILE] TestCh7Ex6.java
 [RUNNING] TestCh7Ex6
 -->
-Test: Chapter7, Exercise6.arePrimeFactors()
-	  [PASSED] Exercise6.arePrimeFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise6.arePrimeFactors("8, [2, 2, 2]") 
-	  [PASSED] Exercise6.arePrimeFactors("15, [3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("35, [5, 7, 1]") 
-	  [PASSED] Exercise6.arePrimeFactors("30, [2, 3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("31, [2, 3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("2431, [11, 13, 17]") 
-	  TEST FINISHED, PASSED: 7/7.
+
+	<br>Chapter7, Exercise6.arePrimeFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
