--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 52
-	You were off by: 39
+	THe number I was thinkin of is: 60
+	You were off by: 47
 	
 <--
 	[OUTPUT OK]
@@ -170,9 +170,9 @@ Im thinking of a number between 1-100, can you guess it?
 	[SUCCESSFUL COMPILE] SwetterciseTest.java
 [RUNNING] SwetterciseTest
 -->
-, 12, 6, 3, 10, 5, 16, 8, 4, 2, 4, 2, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2
+12, 6, 3, 10, 5, 16, 8, 4, 2, 4, 2, 11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 
 	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah i</td><td bgcolor="red"><b>?niw zah I </b></td></tr>
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
@@ -193,7 +193,7 @@ Im thinking of a number between 1-100, can you guess it?
 	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
 	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
 	</table><br>
-	[deductions=0.26999999999999996]
+	[deductions=0.15000000000000002]
 	
 	
 <--
@@ -203,7 +203,7 @@ Im thinking of a number between 1-100, can you guess it?
 	['Swettercise1: PASSED - BUT TEST CASES FOUND SOME ERRORS']
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.73</b>
+<b>          [SCORE] <font color="green">0.85</font></b>
 
 <hr>
 
@@ -269,61 +269,49 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 2/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
 
 [COMPILING] Exercise6.java
-	[ERROR] javac failed Exercise6.java Exercise6.java:5: error: ')' expected
-	        System.out.print(areFactors(n)
-	                                      ^
-	Exercise6.java:8: error: illegal start of expression
-	    public static int arePrimeFactors(int n, int m){
-	    ^
-	Exercise6.java:8: error: ';' expected
-	    public static int arePrimeFactors(int n, int m){
-	          ^
-	Exercise6.java:8: error: ';' expected
-	    public static int arePrimeFactors(int n, int m){
-	                                     ^
-	Exercise6.java:8: error: <identifier> expected
-	    public static int arePrimeFactors(int n, int m){
-	                                            ^
-	Exercise6.java:8: error: not a statement
-	    public static int arePrimeFactors(int n, int m){
-	                                                 ^
-	Exercise6.java:8: error: ';' expected
-	    public static int arePrimeFactors(int n, int m){
-	                                                  ^
-	Exercise6.java:9: error: ';' expected
-	        array = new int[]{1, 2, 3, 44, 34, 23, 26}
-	                                                  ^
-	Exercise6.java:11: error: reached end of file while parsing
-	}
-	 ^
-	9 errors
+	[SUCCESSFUL COMPILE] Exercise6.java
+[TESTING WITH] TestCh7Ex6
+[COMPILING] TestCh7Ex6.java
+	[SUCCESSFUL COMPILE] TestCh7Ex6.java
+[RUNNING] TestCh7Ex6
+-->
+
+	<br>Chapter7, Exercise6.arePrimeFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.0]
 	
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
 	['Exercise5: PASSED - EXCELLENT!'
-	 'Exercise6: COMPILE ERROR (- 0.30)']
+	 'Exercise6: PASSED - EXCELLENT!']
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] <font color="green">1.00</font></b>
 
 </pre></body></html>
