--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 70
-	You were off by: 57
+	The number I was thinking of was: 93
+	You were off by: 80
 	
 <--
 	[OUTPUT OK]
@@ -302,22 +302,17 @@ TestCh7Ex4.java:47: error: cannot find symbol
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 2/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
