--- a/stureports/think-java/Fwuff547.think-java_results.html
+++ b/stureports/think-java/Fwuff547.think-java_results.html
@@ -65,7 +65,7 @@ How many seconds?
 [RUNNING] Exercise4
 -->
 I have a number between 1 and 100, guess what it is?
-	You guessed 13, I was thinking of 37, you were 24 off.
+	You guessed 13, I was thinking of 86, you were 73 off.
 <--
 	[OUTPUT OK]
 
@@ -285,14 +285,17 @@ abcdef
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [PASSED] Exercise5.areFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [PASSED] Exercise5.areFactors("26, [13, 26, 1]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7]") 
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [PASSED] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]") 
-	  TEST FINISHED, PASSED: 6/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
@@ -304,15 +307,18 @@ Test: Chapter7, Exercise5.areFactors()
 	[SUCCESSFUL COMPILE] TestCh7Ex6.java
 [RUNNING] TestCh7Ex6
 -->
-Test: Chapter7, Exercise6.arePrimeFactors()
-	  [PASSED] Exercise6.arePrimeFactors("8, [4, 2, 1]") 
-	  [PASSED] Exercise6.arePrimeFactors("8, [2, 2, 2]") 
-	  [PASSED] Exercise6.arePrimeFactors("15, [3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("35, [5, 7, 1]") 
-	  [PASSED] Exercise6.arePrimeFactors("30, [2, 3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("31, [2, 3, 5]") 
-	  [PASSED] Exercise6.arePrimeFactors("2431, [11, 13, 17]") 
-	  TEST FINISHED, PASSED: 7/7.
+
+	<br>Chapter7, Exercise6.arePrimeFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
