--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 72. You were off by 59.
+	My number was 33. You were off by 20.
 	
 <--
 	[OUTPUT OK]
@@ -285,22 +285,17 @@ Ch 4 Multadd
 	[SUCCESSFUL COMPILE] TestCh7Ex5.java
 [RUNNING] TestCh7Ex5
 -->
-Test: Chapter7, Exercise5.areFactors()
-	  [   :( ] Exercise5.areFactors("8, [4, 2, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("13, [1, 12, 99]") 
-	  [   :( ] Exercise5.areFactors("26, [13, 26, 1]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [   :( ] Exercise5.areFactors("35, [5, 7]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  [PASSED] Exercise5.areFactors("35, [5, 7, 34]") 
-	  [   :( ] Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]"): 
-			EXPECTED: true
-			RECEIVED: false
-	  TEST FINISHED, PASSED: 2/6.
+
+	<br>Chapter7, Exercise5.areFactors()
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
+	</table><br>
+	[deductions=0.0]
+	
 	
 <--
 	[OUTPUT OK]
